<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/header_text"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exceptionMessageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/explanation_text"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exceptionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.7"
            android:fontFamily="monospace"
            android:text="@string/exception_name"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exceptionMessageHeader"
            tools:text="Exception: java.lang.RuntimeException" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exceptionCause"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.7"
            android:fontFamily="monospace"
            android:text="@string/exception_cause"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exceptionName"
            tools:text="Cause: BecauseICanException" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exceptionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.7"
            android:fontFamily="monospace"
            android:text="@string/exception_message"
            android:textAppearance="?attr/textAppearanceBody1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exceptionCause"
            tools:text="Message: Because I Can" />

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/actionsFlow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:constraint_referenced_ids="copyStacktrace,shareStacktrace,launchApplication,searchStackoverflow"
            app:flow_horizontalAlign="center"
            app:flow_horizontalGap="4dp"
            app:flow_horizontalStyle="packed"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exceptionMessage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/copyStacktrace"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy_stacktrace"
            android:textColor="?attr/colorOnSurface"
            app:icon="@drawable/ic_outline_content_copy_24"
            app:iconTint="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shareStacktrace"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_stacktrace"
            android:textColor="?attr/colorOnSurface"
            app:icon="@drawable/ic_outline_share_24"
            app:iconTint="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/launchApplication"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_application"
            android:textColor="?attr/colorOnSurface"
            app:icon="@drawable/ic_baseline_refresh_24"
            app:iconTint="?attr/colorSecondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchStackoverflow"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/search_stackoverflow"
            android:textColor="?attr/colorOnSurface"
            app:icon="@drawable/ic_round_search_24"
            app:iconTint="?attr/colorSecondary" />

        <TextView
            android:id="@+id/stacktraceHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stacktrace"
            android:textAppearance="?attr/textAppearanceOverline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/actionsFlow" />

        <ScrollView
            android:id="@+id/stacktraceScroller"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stacktraceHeader">

            <TextView
                android:id="@+id/stacktrace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?attr/colorError"
                tools:text="@string/sample_stack_trace" />
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>